--- a/src/@core/scss/base/bootstrap-extended/_variables.scss
+++ b/src/@core/scss/base/bootstrap-extended/_variables.scss
@@ -146,8 +146,8 @@ $component-active-bg: $primary !default;
 // Font, line-height, and color for body text, headings, and more.
 
 // stylelint-disable value-keyword-case
-$font-family-sans-serif: 'Montserrat', Helvetica, Arial, serif !default;
-$font-family-monospace: 'Montserrat', Helvetica, Arial, serif !default;
+// $font-family-sans-serif: 'Montserrat', Helvetica, Arial, serif !default;
+// $font-family-monospace: 'Montserrat', Helvetica, Arial, serif !default;
 
 // stylelint-enable value-keyword-case
 $font-size-base: 1rem !default;
@@ -168,7 +168,7 @@ $h3-font-size: $font-size-base * 1.5 !default;
 $h4-font-size: $font-size-base * 1.286 !default;
 $h5-font-size: $font-size-base * 1.07 !default;
 
-$headings-font-family: inherit !default;
+// $headings-font-family: inherit !default;
 $headings-color: #5e5873 !default;
 
 $display-font-sizes: (
