--- a/src/@core/scss/base/components/chart.scss
+++ b/src/@core/scss/base/components/chart.scss
@@ -20,7 +20,7 @@
   // Text font family
   .apexcharts-text,
   .apexcharts-datalabel {
-    font-family: $font-family-base !important;
+    // font-family: $font-family-base !important;
   }
 }
 
