--- a/src/@core/scss/base/plugins/charts/chart-apex.scss
+++ b/src/@core/scss/base/plugins/charts/chart-apex.scss
@@ -65,7 +65,7 @@
   .apexcharts-tooltip-text,
   .apexcharts-datalabel-label,
   .apexcharts-datalabel {
-    font-family: $font-family-base !important;
+    // font-family: $font-family-base !important;
     fill: $body-color;
     font-weight: 400;
     filter: none;
