--- a/src/@core/scss/base/core/menu/_navigation.scss
+++ b/src/@core/scss/base/core/menu/_navigation.scss
@@ -134,13 +134,13 @@
 // Main Navigation
 .navigation {
   font-size: 1.1rem;
-  font-family: $font-family-monospace;
+  // font-family: $font-family-monospace;
   font-weight: 400;
   overflow-y: hidden;
   padding-bottom: 20px;
 
   .navigation-header {
-    font-family: $font-family-monospace;
+    // font-family: $font-family-monospace;
     font-weight: $headings-font-weight;
     line-height: $headings-line-height;
     padding: 12px 22px;
