--- a/src/@core/scss/base/plugins/forms/form-quill-editor.scss
+++ b/src/@core/scss/base/plugins/forms/form-quill-editor.scss
@@ -92,7 +92,7 @@
 }
 .ql-container {
   border-color: $input-border-color !important;
-  font-family: $font-family-monospace;
+  // font-family: $-monospace;
 }
 .ql-editor {
   a {
