--- a/src/@core/scss/core.scss
+++ b/src/@core/scss/core.scss
@@ -11,3 +11,27 @@
 
 // React Specific
 @import 'react/index';
+
+
+
+
+.ce-block__content{
+   
+    border: 1px solid  #ccc !important;
+    border-radius: 5px;
+    background-color: #ebebeb;
+
+   
+}
+// @font-face {
+//     font-family:'yekan';
+//     src:url('../src/@core/assets/fonts/feather/fonts/Yekan.ttf');
+// }
+@import url('https://fonts.cdnfonts.com/css/persian');
+:root {
+    --bs-body-font-family: 'Persian', sans-serif ;
+}
+@font-face {
+    font-family:'sans';
+    src:url('../src/@core/assets/fonts/feather/fonts/IranSans.ttf');
+}
